--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
         </svg>
       </div>
     </header>
+
+    <main>
+      <div class="main_info">
+        <img src="./assets/logo-movie.png" width="250px" alt="">
+
+        <p>
+          Um dia, Mario e Luigi vão para no reino dos cogumelos, governado pela Princesa Peach, 
+mas ameaçado pelo rei dos Koopas, Bowser, que vai fazer de tudo para conseguir 
+reinar todos os lugares. É então quando Luigi é raptado por Bowser e o usa para 
+procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
+        </p>
+        <div>
+          <a href="https://youtu.be/cDNkh5WybZo" target="_blank">Assistir Trailer</a>
+          <button>
+            Comprar Ingressos
+          </button>
+        </div>
+      </div>
+      
+      <img src="./assets/mario-and-luigi.png" width="680px" alt="">
+    </main>
   </div>
 
   
