--- a/index.html
+++ b/index.html
@@ -59,15 +59,31 @@
 
     <main>
       <div class="main_info">
-        <img src="./assets/logo-movie.png" width="250px" alt="">
+        <img
+          data-aos="fade-up"
+          data-aos-duration="800"
+          data-aos-easing="ease-in-out"
+          src="./assets/logo-movie.png" 
+          width="250px"
+        >
 
-        <p>
+        <p
+          data-aos="fade-up"
+          data-aos-delay="300"
+          data-aos-duration="800"
+          data-aos-easing="ease-in-out"
+          <!-- animacao no carregamento do site -->
           Um dia, Mario e Luigi vão para no reino dos cogumelos, governado pela Princesa Peach, 
 mas ameaçado pelo rei dos Koopas, Bowser, que vai fazer de tudo para conseguir 
 reinar todos os lugares. É então quando Luigi é raptado por Bowser e o usa para 
 procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
         </p>
-        <div>
+        <div
+          data-aos="fade-up"
+          data-aos-delay="600"
+          data-aos-duration="800"
+          data-aos-easing="ease-in-out"
+        >
           <a href="https://youtu.be/cDNkh5WybZo" target="_blank">Assistir Trailer</a>
           <button>
             Comprar Ingressos
@@ -75,7 +91,14 @@ procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
         </div>
       </div>
       
-      <img src="./assets/mario-and-luigi.png" width="680px" alt="">
+      <img
+        data-aos="fade-up"
+        data-aos-delay="500"
+        data-aos-duration="800"
+        data-aos-easing="ease-in-out
+        src="./assets/mario-and-luigi.png"
+        width="680px"
+      >
     </main>
   </div>
 
