Reparo do background

--- a/index.html
+++ b/index.html
@@ -95,15 +95,12 @@ procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
         data-aos="fade-up"
         data-aos-delay="500"
         data-aos-duration="800"
-        data-aos-easing="ease-in-out
+        data-aos-easing="ease-in-out"
         src="./assets/mario-and-luigi.png"
         width="680px"
       >
     </main>
   </div>
-
-  
-
  
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
